@@ -24,6 +24,7 @@ import org.apache.lucene.codecs.lucene40.values.Writer;
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.PerDocWriteState;
 import org.apache.lucene.index.DocValues;
+import org.apache.lucene.index.DocValues.Type; // javadoc
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.util.BytesRef;
@@ -31,6 +32,7 @@ import org.apache.lucene.util.Counter;
 
 /**
  * Abstract base class for PerDocConsumer implementations
+ *
  * @lucene.experimental
  */
 //TODO: this needs to go under lucene40 codec (its specific to its impl)
@@ -39,12 +41,27 @@ public abstract class DocValuesWriterBase extends PerDocConsumer {
   protected final String segmentSuffix;
   private final Counter bytesUsed;
   protected final IOContext context;
-  
+  private final boolean fasterButMoreRam;
+
+  /**
+   * @param state The state to initiate a {@link PerDocConsumer} instance
+   */
   protected DocValuesWriterBase(PerDocWriteState state) {
+    this(state, true);
+  }
+
+  /**
+   * @param state The state to initiate a {@link PerDocConsumer} instance
+   * @param fasterButMoreRam whether packed ints for docvalues should be optimized for speed by rounding up the bytes
+   *                         used for a value to either 8, 16, 32 or 64 bytes. This option is only applicable for
+   *                         docvalues of type {@link Type#BYTES_FIXED_SORTED} and {@link Type#BYTES_VAR_SORTED}.
+   */
+  protected DocValuesWriterBase(PerDocWriteState state, boolean fasterButMoreRam) {
     this.segmentName = state.segmentName;
     this.segmentSuffix = state.segmentSuffix;
     this.bytesUsed = state.bytesUsed;
     this.context = state.context;
+    this.fasterButMoreRam = fasterButMoreRam;
   }
 
   protected abstract Directory getDirectory() throws IOException;
@@ -54,10 +71,10 @@ public abstract class DocValuesWriterBase extends PerDocConsumer {
   }
 
   @Override
-  public DocValuesConsumer addValuesField(DocValues.Type valueType, FieldInfo field) throws IOException {
+  public DocValuesConsumer addValuesField(Type valueType, FieldInfo field) throws IOException {
     return Writer.create(valueType,
         docValuesId(segmentName, field.number), 
-        getDirectory(), getComparator(), bytesUsed, context);
+        getDirectory(), getComparator(), bytesUsed, context, fasterButMoreRam);
   }
 
   public static String docValuesId(String segmentsName, int fieldId) {
